--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+
+.idea/
+*.iml
+
+# generated proto files
+server/**/io/grpc/examples/helloworld/
+client/**/io/grpc/examples/helloworld/
