--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     paths:
-    - '**.java'
+      - '**.java'
 
 jobs:
   build:
@@ -15,6 +15,7 @@ jobs:
       - name: Setup reviewdog
         run: |
           mkdir -p $HOME/bin && curl -sfL https://raw.githubusercontent.com/reviewdog/reviewdog/master/install.sh | sh -s -- -b $HOME/bin
+          echo $HOME/bin >> $GITHUB_PATH
       - name: Run check
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
