[add]add spotbugs ignore

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -132,6 +132,9 @@
         <groupId>com.github.spotbugs</groupId>
         <artifactId>spotbugs-maven-plugin</artifactId>
         <version>4.2.3</version>
+        <configuration>
+          <excludeFilterFile>spotbugs-ignore.xml</excludeFilterFile>
+        </configuration>
         <executions>
           <execution>
             <id>spotbugs-check</id>
